# create-mint-transfer-token

./: Anchor.toml  README.md
programs/create-mint-transfer-token/: Cargo.toml
programs/create-mint-transfer-token/src/: lib.rs
programs/create-mint-transfer-token/src/instructions/: create.rs  mint.rs  transfer.rs
tests/: create-mint-transfer-token.ts
